# openfpga-litex

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  analogue_pocket.py  csr.py  gateware.json  litex_full_platform.py  pocket.svd  replaced_components.py  verilog_platform.py
.cargo/: config.toml
docs/: control.md  resolution.md
examples/c_project/: Makefile  README.md  entry.s  entry2.s  kernel.c  linker-old.ld  linker.ld
examples/rust/: Cargo.toml  Makefile  README.md  build.rs
examples/rust/.cargo/: config.toml
examples/rust/res/: memory.ld
examples/rust/src/: hardware.rs  init.s  lvgl.rs  main.rs  pixel.rs  serial.rs  slint.rs  uart_printer.rs
examples/rust/ui/: main.slint
lang/: README.md
lang/c/: README.md
lang/c/examples/dhrystone/: Makefile  README.md  time.c
lang/c/examples/fungus/: Makefile  README.md  fungus.c  xoroshiro64starstar.h  xoshiro128starstar.h
lang/c/examples/helloworld/: Makefile  README.md  hello.c  init_asm.S
lang/c/examples/helloworld-cpp/: Makefile  README.md  hello.cpp
lang/linker/: c-linker.ld  init_asm.S  main-c-linker.ld  regions.ld
lang/rust/: Cargo.toml  Makefile  README.md  riscv32imafdc-unknown-none-elf.json
lang/rust/crates/: Makefile
lang/rust/crates/litex-openfpga/: Cargo.toml
lang/rust/crates/litex-openfpga/src/: file.rs  lib.rs  slint_platform.rs  uart_printer.rs
lang/rust/crates/litex-pac/: Cargo.toml  Makefile
lang/rust/crates/litex-pac/src/: constants.rs  lib.rs
lang/rust/examples/interact/: Cargo.toml  README.md  interact.json
lang/rust/examples/interact/src/: main.rs
lang/rust/examples/minibreak/: Cargo.toml  README.md  build.rs
lang/rust/examples/minibreak/src/: irect2.rs  main.rs
lang/rust/examples/minimal/: Cargo.toml  README.md
lang/rust/examples/rough_fps/: Cargo.toml  README.md  build.rs
lang/rust/examples/rtc_id/: Cargo.toml  README.md  build.rs
lang/rust/examples/vblank/: Cargo.toml  README.md  build.rs
litex/: .gitmodules  Makefile  analogue_pocket.py  csr.py  litex_term.py  pocket.svd  replaced_components.py  verilog_platform.py
litex/rust/: Cargo.toml  memory.x
litex/rust/crates/litex-pac/: Cargo.toml
litex/rust/src/: audio.rs  rtc_id.rs
litex/rust/src/hardware/: mod.rs  uart_printer.rs
litex/rust/src/ui/: mod.rs
litex/rust/ui/: main.slint  rtc_id.slint
pkg/pocket/Cores/agg23.RISCV/: core.json  data.json  info.txt  input.json  interact.json  video.json
platform/pocket/: apf_top.v  pocket.tcl
projects/: openFPGA-RISC-V_pocket.qpf  openFPGA-RISC-V_pocket.qsf  stp1.stp
rtl/: memory_map.sv  openFPGA_RISC-V.qip  openFPGA_RISC-V.sv  risc_v.qip  risc_v.sv
rtl/components/: uart.sv  uart_rx.sv  uart_tx.sv
rtl/litex/: VexRiscvLitexSmpCluster_Cc1_Iw64Is4096Iy1_Dw64Ds4096Dy1_ITs4DTs4_Ldw32_Ood_Fpu4_Hb1_Rvc.v  litex.qip  litex.v  litex_mem.init  litex_rom.init
rtl/test/: riscv_tb.sv  uart_output.sv
rtl/video/: counts.sv  video.sv
rust/: Cargo.toml  Makefile  build.rs
rust/.cargo/: config  flash.sh
rust/crates/litex-pac/: Makefile
rust/crates/litex-pac/src/: build.rs  device.x  lib.rs
rust/src/: audio.rs  main.rs  rtc_id.rs  vblank.rs
rust/src/hardware/: file.rs  mod.rs
rust/ui/: audio.slint  main.slint
(+7 files in other folders)
