[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
litex-hal = "0.3.0"
litex-pac = { path = "crates/litex-pac", features = ["rt"] }
nb = "1.1.0"
panic-halt = "0.2.0"
riscv = "0.10.1"
riscv-rt = "0.11.0"
