[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1.1.1"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
