[package]
name = "rust"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1.1.1"
embedded-alloc = "0.5.0"
embedded-hal = "0.2.7"
# lvgl = { version = "0.6.2", features = ["embedded_graphics", "unsafe_no_autoinit"] }
nb = "1.1.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
slint = { version = "1.2.0", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }

[build-dependencies]
slint-build = "1.2.0"
