[package]
name = "litex-openfpga"
version = "0.1.0"
edition = "2021"

[features]
slint = ["dep:slint"]

[dependencies]
embedded-hal = "0.2.7"
litex-hal = "0.3.0"
litex-pac = { path = "../litex-pac", features = ["rt"] }
num-traits = { version = "0.2", default-features = false }
slint = { version = "1.2.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"], optional = true }
